# APISage-AI

./: .gitignore  .mailmap  .pre-commit-config.yaml  CICD_RECOMMENDATIONS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  INTERVIEW_PRACTICE_SCENARIOS.md  INTERVIEW_PREPARATION.md  INTERVIEW_QUICK_REFERENCE.md  LICENSE  LOCAL_DEPLOYMENT.md  Makefile  POETRY_GUIDE.md  QUICK_START.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_CICD_SUMMARY.md  __init__.py  clone_analysis_report.md  docker-compose.yml  env.example  gradio_app.py  gradio_app_fixed_llm.py  gradio_app_pro.py  install.sh  modern_gradio_app.py  nginx.conf  pro_gradio_app.py  pyproject.toml  rag_gradio_app.py  sample_api_doc.json  test_api_analyzer.py  test_api_spec.json  test_evaluation_system.py  test_quality_analyzer.py  test_score_extraction.py  working_app.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  security_vulnerability.md
.github/workflows/: block-user.yml  ci.yml  docker.yml  security.yml
APISage/: DEMO_PRESENTATION_PLAN.md  Dockerfile  FINAL_PROJECT_OVERVIEW.md  README.md  docker-compose.yml  env.example  main.py  requirements.txt
APISage/agents/: __init__.py  api_analyzer.py  code_generator.py  document_processor.py  evaluator.py
APISage/api/: __init__.py  models.py  routes.py
APISage/config/: __init__.py  config_loader.py  settings.py
APISage/core/: __init__.py  orchestrator.py  state.py
APISage/demo/: demo_analysis.sh  demo_codegen.sh  demo_health.sh
APISage/docs/: PERFORMANCE_OPTIMIZATION_SUMMARY.md  SDK_README.md  detailed_evaluation_report.md
APISage/examples/: basic_usage.py  extended_usage.py  sdk_demo.py
APISage/infrastructure/: backend_manager.py  llm_manager.py
APISage/infrastructure/llm_providers/: __init__.py  litellm_provider.py  provider_factory.py
APISage/infrastructure/rerankers/: api_docs_reranker.py  reranker_factory.py
APISage/infrastructure/vector_stores/: base_store.py  chroma_store.py  milvus_store.py  pinecone_store.py  qdrant_store.py  store_factory.py
APISage/sdk/: __init__.py  config.py
APISage/utils/: __init__.py  database.py  redis_client.py
agents/: api_analyzer.py  code_generator.py  document_processor.py  evaluator.py
agents/evaluation/: quality_evaluator.py
agents/parsers/: __init__.py  base_parser.py  markdown_parser.py  openapi_parser.py  postman_parser.py
api/: __init__.py  main.py  models.py  routes.py
clone_report.json/: jscpd-report.json
config/: antipatterns.yaml  backends.py  config_loader.py  settings.py
core/: orchestrator.py
demo/: demo_flow_simple.py
docs/: COMPLETE_FLOW_SEQUENCE.md
evaluation/: __init__.py  llm_evaluator.py
examples/: sample_openapi.json
infrastructure/: __init__.py  agentic_orchestrator.py  backend_manager.py  llm_manager.py  realtime_sync.py  token_optimizer.py
infrastructure/llm_providers/: __init__.py  base_provider.py  openai_direct_provider.py  provider_factory.py
infrastructure/rerankers/: __init__.py  base_reranker.py  llm_reranker.py  semantic_reranker.py
infrastructure/vector_stores/: __init__.py  chroma_store.py  hybrid_store.py  qdrant_store.py
sdk/: rag_system.py  search_engine.py
utils/: dependency_manager.py  redis_client.py
